[package]
name = "wikistra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
color-eyre = "0.6.2"
flate2 = "1.0.26"
indicatif = "0.17.6"
number_prefix = "0.4.0"
pathfinding = "4.3.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_cbor = "0.11.2"
smol_str = "0.2.0"
thiserror = "1.0.44"
ureq = "2.7.1"
utf8-decode = "1.0.1"
