[package]
name = "wikistra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
color-eyre = "0.6.2"
fancy-regex = "0.11.0"
flate2 = "1.0.26"
indicatif = "0.17.6"
number_prefix = "0.4.0"
once_cell = "1.18.0"
regex = "1.9.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
smol_str = "0.2.0"
thiserror = "1.0.44"
ureq = "2.7.1"
utf8-decode = "1.0.1"

[profile.release]
lto = true

[profile.bench]
lto = true
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]


